Added ambassdor page & latest update

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>Vidyayan | Home</title>
+  <title>VSoC | Vidyayan Summer of Code</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="robots" content="all,follow">
@@ -104,8 +104,8 @@
             <button type="button"
   class="btn btn-primary btn-lg btn-block btn-outline-warning btn-rounded"
   data-mdb-ripple-color="dark"
->
- Join Now
+><a href="https://www.linkedin.com/showcase/vsoc-community" target="_blank" style="color: #f17c1d; ">
+Coming Soon...</a>
 </button>
           <!--  <img src="./icons/g-play1.jpeg" style="width:50%; height: 100%" alt="">
             <img src="./icons/ios.jpeg" style="width:50%; height: 60%" alt="">-->
@@ -287,6 +287,23 @@
         </div>
     </section>
   </section>
+
+  <section id="" style="padding: 0px 15px 0px 15px; margin:0;">
+    <div class="container">
+      <div class="row">
+        <h2 class="section-heading text-primary">About <b>VSoC</b></h2>
+        <p class="section-text"><b>The <a href="https://vidyayan.in" target="_blank">Vidyayan</a> is a well-known EdTech organisation. It has been successful in arming today's youngsters with the cutting-edge technologies that are transforming the world.</b> 
+
+         
+        <p class="section-text">It's a solid effort that encourages young people to learn, grow, and broaden their horizons in a competitive world.</p>
+        <p class=""> Our goal is to reach out to anyone who is eager to learn more. Throughout the year, we run a variety of educational programmes and provide internship opportunities for young people to help them become industry-ready. Our network has grown to a large extent and has reached the pinnacle of success.
+        </p>
+
+       
+        </p>
+      </div>
+    </div>
+  </section>
   <section class="about py-0">
     <div class="container">
       <p class="h6 text-uppercase text-primary"></p>
@@ -405,9 +422,9 @@
           <div class="direction-l">
             <div class="flag-wrapper">
               <span class="flag text-primary">Application Deadline</span>
-              <span class="time-wrapper"><span class="time" style="color: black;">February, 2022</span></span>
+              <span class="time-wrapper"><span class="time" style="color: black;">March 31, 2022</span></span>
             </div>
-            <div class="desc">All organisations interested in participating in VSoC 2022 must submit their application by 00:30 on February 28, 2022. (India Standard Time).</div>
+            <div class="desc">All organisations interested in participating in VSoC 2022 must submit their application by 00:30 on March 31th, 2022. (India Standard Time).</div>
           </div>
         </li>
 
@@ -415,31 +432,41 @@
         <li>
           <div class="direction-r">
             <div class="flag-wrapper">
-              <span class="flag text-primary">Project Assignment</span>
-              <span class="time-wrapper"><span class="time" style="color: black;">March, 2022</span></span>
+              <span class="flag text-primary">Review Applications</span>
+              <span class="time-wrapper"><span class="time" style="color: black;">April 15, 2022</span></span>
             </div>
             <div class="desc">
-              Interested students can now begin discussing project ideas with accepted mentor organizations.</div>
+             The submitted applications will be reviewed till April 15th..</div>
           </div>
         </li>
         <!-- Item 4 -->
         <li>
           <div class="direction-l">
             <div class="flag-wrapper">
-              <span class="flag text-primary">Student Application</span>
-              <span class="time-wrapper"><span class="time" style="color: black;">April, 2022</span></span>
+              <span class="flag text-primary">Shortlisted Applicants</span>
+              <span class="time-wrapper"><span class="time" style="color: black;">April 25, 2022</span></span>
             </div>
-            <div class="desc">Students can apply to mentor groups by registering and filling out an application. By 23:30 on April 10th, 2022, all ideas must be submitted (India Standard Time).</div>
+            <div class="desc">Shortlisted Participants will be contacted via email and will get an invitation to the workspace.</div>
           </div>
         </li>
         <!-- Item 5 -->
         <li>
           <div class="direction-r">
             <div class="flag-wrapper">
-              <span class="flag text-primary">Bonding Session</span>
-              <span class="time-wrapper"><span class="time" style="color: black;">April, 2022</span></span>
+              <span class="flag text-primary">Project Assignment</span>
+              <span class="time-wrapper"><span class="time" style="color: black;">May, 2022</span></span>
             </div>
-            <div class="desc">Accepted students are matched with a mentor and given the opportunity to begin preparing their projects and milestones.
+            <div class="desc">Allotment of project to the participants.</div>
+          </div>
+        </li>
+        <!-- Item 5 -->
+        <li>
+          <div class="direction-l">
+            <div class="flag-wrapper">
+              <span class="flag text-primary">Bonding Session</span>
+              <span class="time-wrapper"><span class="time" style="color: black;">June 5, 2022</span></span>
+            </div>
+            <div class="desc">Participants are matched with a Mentor and given the opportunity to begin preparing their projects and milestones.
 
               Students spend a month learning more about the community of their organisation.
               Students work on their VSoC projects.</div>
@@ -448,10 +475,10 @@
         <!-- Item 6 -->
 
         <li>
-          <div class="direction-l">
+          <div class="direction-r">
             <div class="flag-wrapper">
               <span class="flag text-primary">Coding period ends</span>
-              <span class="time-wrapper"><span class="time" style="color: black;">July, 2022</span></span>
+              <span class="time-wrapper"><span class="time" style="color: black;">July 30, 2022</span></span>
             </div>
             <div class="desc">Mentors examine student code samples to see if they finished their VSoC 2022 project effectively.</div>
           </div>
@@ -460,12 +487,12 @@
  <!-- Item 7-->
 
  <li>
-  <div class="direction-r">
+  <div class="direction-l">
     <div class="flag-wrapper">
       <span class="flag text-primary">Results declared.</span>
-      <span class="time-wrapper"><span class="time" style="color: black;">July, 2022</span></span>
+      <span class="time-wrapper"><span class="time" style="color: black;">August, 2022</span></span>
     </div>
-    <div class="desc text-muted">Students are notified of the pass/fail status of their VSoC 2022 projects.</div>
+    <div class="desc ">Students are notified of the pass/fail status of their VSoC 2022 projects.</div>
   </div>
 </li>
 
@@ -492,7 +519,7 @@
 -->
       <hr>
 
-      <h2 class="mb-5 text-primary">Get Vidyayan's Facilities</h2>
+      <h2 class="mb-5 text-primary">Get VSoC facilities</h2>
 
       <div class="row pb-5">
         <div class="col-lg-4 col-md-6 mb-4 mb-lg-0">
@@ -500,8 +527,7 @@
           <div class="card border-0 shadow rounded-lg text-center">
             <div class="card-body p-5">
               <img src="/img/ad1.png" alt="">
-              <h3 class="font-weight-normal h4 my-4">Conceptual clarity
-                through visualisation</h3>
+              <h3 class="font-weight-normal h4 my-4">Vidyayan Summer of Code 2022</h3>
               <p class="text-small mb-0"></p>
             </div>
           </div>
@@ -511,8 +537,7 @@
           <div class="card border-0 shadow rounded-lg text-center">
             <div class="card-body p-5">
               <img src="/img/ad2.png" alt="">
-              <h3 class="font-weight-normal h4 my-4">Personalised learning
-                programs</h3>
+              <h3 class="font-weight-normal h4 my-4">Vidyayan Internship Programme</h3>
               <p class="text-small mb-0"></p>
             </div>
           </div>
@@ -522,8 +547,7 @@
           <div class="card border-0 shadow rounded-lg text-center">
             <div class="card-body p-5">
               <img src="/img/ad3.png" alt="">
-              <h3 class="font-weight-normal h4 my-4">Unmatched individual
-                attention</h3>
+              <h3 class="font-weight-normal h4 my-4">Vidyayan Training Programme</h3>
               <p class="text-small mb-0"></p>
             </div>
           </div>
@@ -550,7 +574,7 @@
         </div> -->
         <div class="row align-items-center">
             <div class="col-lg-6 mb-5 mb-lg-0">
-                <h2>Start your Coding with Vidyayan</h2>
+                <h2>Start your Career with Vidyayan</h2>
                 <p class="text-muted">Vidyayan provides you number of facilities.Join us and boost up your
                     Coding
                     knowledge.</p>
@@ -559,8 +583,13 @@
                     <li class="text-muted mb-2">Weekly tests and quizes</li>
                     <li class="text-muted mb-2">Clear your doubt</li>
                 </ul>
-                <button class="btn btn-primary js-modal-btn" data-video-id="B6uuIHpFkuo"><i
-                        class="fas fa-play-circle mr-2"></i>Play video</button>
+                <button
+                type="button"
+                class="btn   btn-outline-warning btn-rounded"
+                data-mdb-ripple-color="dark"
+              >
+              <a href="https://vidyayan.in" style="text-decoration: none; color:rgb(243, 116, 12); " target="_blank"> Join Us Now</a>
+              </button>
             </div>
             <div class="col-lg-6">
                 <div class="row">
@@ -724,18 +753,18 @@
             <li class="mb-2 text-muted">BCE BHAGALPUR CAMPUS</li>
             <li class="mb-2 text-muted">BHAGALPUR, 813210 IN</li>
             <li class="mb-2"><a class="footer-link" href="tel:8271742953">Phone: 8271742953</a></li>
-            <li class="mb-2"><a class="footer-link" href="email:contact@vidyayan.in">Email: contact@vidyayan.in</a></li>
+            <li class="mb-2"><a class="footer-link" href="email:contact@vidyayan.in">Email: vsoc@vidyayan.in</a></li>
           </ul>
           <ul class="list-inline mb-0">
             <li class="list-inline-item"><a class="social-link" href="https://www.facebook.com/vidyayan.edu"><i
                   class="fab fa-facebook-f"></i></a></li>
-            <li class="list-inline-item"><a class="social-link" href="https://www.linkedin.com/company/vidyayan"><i
+            <li class="list-inline-item"><a class="social-link" href="https://www.linkedin.com/showcase/vsoc-community"><i
                   class="fab fa-linkedin-in"></i></a></li>
             <li class="list-inline-item"><a class="social-link" href="https://twitter.com/Vidyayan2"><i
                   class="fab fa-twitter"></i></a></li>
             <li class="list-inline-item"><a class="social-link" href="https://www.instagram.com/vidyayan_edu/"><i
                   class="fab fa-instagram"></i></a></li>
-            <li class="list-inline-item"><a class="social-link" href="mailto:contact@vidyayan.in"><i
+            <li class="list-inline-item"><a class="social-link" href="mailto:vsoc@vidyayan.in"><i
                   class="fab fa-google-plus"></i></a></li>
 
           </ul>
