latest update, internship page added

--- a/faqs.html
+++ b/faqs.html
@@ -49,13 +49,13 @@
                     <li class="nav-item"><a class="nav-link link-scroll" href="index.html">Home <span class="sr-only"></span></a>
                     </li>
                     <li class="nav-item"><a class="nav-link link-scroll" href="projects.html">Projects</a></li>
-                    <li class="nav-item"><a class="nav-link link-scroll mr-2 active"
+                    <!-- <li class="nav-item"><a class="nav-link link-scroll mr-2 active"
                             href="leaderboard.html">Leaderboard</a>
-                    </li>
+                    </li> -->
                     <li class="nav-item"><a class="nav-link link-scroll mr-2" href="internship.html">Internship</a></li>
                     <!-- <li class="nav-item"><a class="nav-link link-scroll mr-2" href="training.html">Training</a></li> -->
                     <li class="nav-item"><a class="nav-link link-scroll mr-2" href="team.html">Team</a></li>
-                    <li class="nav-item"><a class="nav-link link-scroll mr-2" href="contact.html">Contact</a></li>
+                    <li class="nav-item"><a class="nav-link link-scroll mr-2" href="#vsoc_contact">Contact</a></li>
                     <li class="nav-item"><a class="nav-link link-scroll mr-2" href="faqs.html">FAQs</a></li>
                     <div class="dropdown nav-item">
                         <a class="dropdown-toggle nav-link" href="#" role="button" id="dropdownMenuLink"
@@ -64,8 +64,8 @@
                         </a>
 
                         <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-                            <a class="dropdown-item" href="/about.html">About VSoC</a>
-                            <a class="dropdown-item" href="/about.html">Campus Ambessdor</a>
+                            <a class="dropdown-item" href="about.html">About VSoC</a>
+                            <a class="dropdown-item" href="ambassdor.html">Campus Ambessdor</a>
                             <a class="dropdown-item" href="#">Careers</a>
                             <a class="dropdown-item" href="#">Our Blog</a>
                             <a class="dropdown-item" href="#">Terms & Conditions</a>
@@ -471,7 +471,7 @@
             </div>
         </section> --> -->
     </section>
-    <footer class="with-pattern-1 position-relative">
+    <footer class="with-pattern-1 position-relative" id="vsoc_contact">
         <div class="container section-padding-y">
           <div class="row">
             <div class="col-lg-3 mb-4 mb-lg-0"><img class="mb-4" src="main_logo.png" alt="" width="200">
