--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
           <li class="nav-item"><a class="nav-link link-scroll mr-2" href="internship.html">Internship</a></li>
           <!-- <li class="nav-item"><a class="nav-link link-scroll mr-2" href="training.html">Training</a></li> -->
           <li class="nav-item"><a class="nav-link link-scroll mr-2" href="team.html">Team</a></li>
-          <li class="nav-item"><a class="nav-link link-scroll mr-2" href="contact.html">Contact</a></li>
+          <li class="nav-item"><a class="nav-link link-scroll mr-2" href="#vsoc_contact">Contact</a></li>
           <li class="nav-item"><a class="nav-link link-scroll mr-2" href="faqs.html">FAQs</a></li>
 
 
@@ -73,7 +73,7 @@
             </a>
 
             <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-              <a class="dropdown-item" href="about.html">About VSoC</a>
+              <a class="dropdown-item" href="#about_vsoc">About VSoC</a>
               <a class="dropdown-item" href="#">Campus Ambessdor</a>
               <a class="dropdown-item" href="#">Careers</a>
               <a class="dropdown-item" href="#">Our Blog</a>
@@ -288,7 +288,7 @@ Coming Soon...</a>
     </section>
   </section>
 
-  <section id="" style="padding: 0px 15px 0px 15px; margin:0;">
+  <section id="about_vsoc" style="padding: 0px 15px 0px 15px; margin:0;">
     <div class="container">
       <div class="row">
         <h2 class="section-heading text-primary">About <b>VSoC</b></h2>
@@ -375,15 +375,15 @@ Coming Soon...</a>
         <div class="container">
           <div class="row">
             <h2 class="section-heading text-primary">How <b>Does It Work?</b></h2>
-            <p class="section-text"><b>Vidyayan Summer Of Code (VSoC) is a Vidyayan open source initiative that runs for three months. All enrolled participants in this Summer Of Code will have the unique chance to connect with Mentors and the Organizing Team. the mentors and the Organizing Team from 24th February 2021 to 28th February 2021.
+            <p class="section-text"><b>Vidyayan Summer Of Code (VSoC)</b> is a Vidyayan open source initiative that runs for three months. All enrolled participants in this Summer Of Code will have the unique chance to connect with Mentors and the Organizing Team. the mentors and the Organizing Team from May 2022 to July 30th 2022.
             </p>
-            <p class="section-text">In this period they will extract any help or can resolve any kind of query or uncertainty that they could be having regarding the projects or it’s implementation. The team and therefore the mentors will endeavour to supply the specified help from their absolute best resources.The mentors will declare the issues of the Open Source Projects beginning March 1st, and the admins will be in charge of the final structuring of the websites. If a participant wants to work on a project, he or she must comment on the problem and submit a pull request, and if the mentor approves the work, the participant will be given the chance to do so.</p>
+            <p class="section-text">In this period they will extract any help or can resolve any kind of query or uncertainty that they could be having regarding the projects or it’s implementation. The team and therefore the mentors will endeavour to supply the specified help from their absolute best resources.The mentors will declare the issues of the Open Source Projects.If a participant wants to work on a project, he or she must comment on the problem and submit a pull request, and if the mentor approves the work, the participant will be given the chance to do so.</p>
             <p class="">Participants will be able to claim issues on a first-come, first-served basis.
               The mentors will be required to keep a scoreboard and provide a biweekly review of their individual mentees since the participants will be continually assessed on all of the projects to which they participate.
             </p>
 
-            <p class="section-text">Following the event's end on May 31, 2021, the organising team will include the mentors' leaderboards in their final appraisal of the participants, and the results will be announced.
-              by June 30th, 2022.
+            <p class="section-text">Following the event's end on May 30, 2022, the organising team will include the mentors' leaderboards in their final appraisal of the participants, and the results will be announced
+              by August, 2022.
               
             </p>
           </div>
@@ -413,7 +413,7 @@ Coming Soon...</a>
               <span class="flag text-primary">Applications Open</span>
               <span class="time-wrapper"><span class="time" style="color: black;"> January 20, 2022</span></span>
             </div>
-            <div class="desc" style="font-weight: 600;">Open source groups interested in serving as participant/mentors in this year's programme can submit an application.</div>
+            <div class="desc" >Open source groups interested in serving as participant/mentors in this year's programme can submit an application.</div>
           </div>
         </li>
 
@@ -716,7 +716,7 @@ Coming Soon...</a>
       </div>
     </div>
   </section><a class="scropll-top-btn" id="scrollTop" href="#"><i class="fas fa-long-arrow-alt-up"></i></a>
-  <footer class="with-pattern-1 position-relative">
+  <footer class="with-pattern-1 position-relative" id="vsoc_contact">
     <div class="container section-padding-y">
       <div class="row">
         <div class="col-lg-3 mb-4 mb-lg-0"><img class="mb-4" src="main_logo.png" alt="" width="200">
