--- a/projects.html
+++ b/projects.html
@@ -54,7 +54,7 @@
                     <li class="nav-item"><a class="nav-link link-scroll mr-2" href="internship.html">Internship</a></li>
                     <!-- <li class="nav-item"><a class="nav-link link-scroll mr-2" href="training.html">Training</a></li> -->
                     <li class="nav-item"><a class="nav-link link-scroll mr-2" href="team.html">Team</a></li>
-                    <li class="nav-item"><a class="nav-link link-scroll mr-2" href="contact.html">Contact</a></li>
+                    <li class="nav-item"><a class="nav-link link-scroll mr-2" href="#vsoc_contact">Contact</a></li>
                     <li class="nav-item"><a class="nav-link link-scroll mr-2" href="faqs.html">FAQs</a></li>
                     <div class="dropdown nav-item">
                         <a class="dropdown-toggle nav-link" href="#" role="button" id="dropdownMenuLink"
@@ -438,7 +438,7 @@
         </div>
     </section>-->
     <a class="scropll-top-btn" id="scrollTop" href="#"><i class="fas fa-long-arrow-alt-up"></i></a>
-    <footer class="with-pattern-1 position-relative">
+    <footer class="with-pattern-1 position-relative" id="vsoc_contact">
         <div class="container section-padding-y">
           <div class="row">
             <div class="col-lg-3 mb-4 mb-lg-0"><img class="mb-4" src="main_logo.png" alt="" width="200">
