--- a/internship.html
+++ b/internship.html
@@ -55,7 +55,7 @@
                             href="internship.html">Internship</a></li>
                     <!-- <li class="nav-item"><a class="nav-link link-scroll mr-2" href="training.html">Training</a></li> -->
                     <li class="nav-item"><a class="nav-link link-scroll mr-2" href="team.html">Team</a></li>
-                    <li class="nav-item"><a class="nav-link link-scroll mr-2" href="contact.html">Contact</a></li>
+                    <li class="nav-item"><a class="nav-link link-scroll mr-2" href="#vsoc_contact">Contact</a></li>
                     <li class="nav-item"><a class="nav-link link-scroll mr-2" href="faqs.html">FAQs</a></li>
 
 
@@ -97,7 +97,7 @@
               
               <div class="row">
                
-                <button type="button" class="btn btn-primary btn-lg btn-block">Apply Now for Internship</button>
+                <button type="button" class="btn btn-primary btn-lg btn-block"><a href="https://docs.google.com/forms/d/e/1FAIpQLSeS-cJWU4E7eqVB6V4m-Fz3HMDBByKcN1YJ3DQ7xXyDXIRUAw/viewform" target="_blank">Apply Now for Internship</a></button>
 
                 <button type="button" class="btn btn-secondary btn-lg btn-block"><a href="#step-to-apply" style="color: #fff;"> Read Steps to Apply</a></button>
               </div>
@@ -648,7 +648,7 @@
             </div>
         </div>
     </section>--><a class="scropll-top-btn" id="scrollTop" href="#"><i class="fas fa-long-arrow-alt-up"></i></a>
-    <footer class="with-pattern-1 position-relative">
+    <footer class="with-pattern-1 position-relative" id="vsoc_contact">
         <div class="container section-padding-y">
           <div class="row">
             <div class="col-lg-3 mb-4 mb-lg-0"><img class="mb-4" src="main_logo.png" alt="" width="200">
