--- a/leaderboard.html
+++ b/leaderboard.html
@@ -55,7 +55,7 @@
                     <li class="nav-item"><a class="nav-link link-scroll mr-2" href="internship.html">Internship</a></li>
                     <li class="nav-item"><a class="nav-link link-scroll mr-2" href="training.html">Training</a></li>
                     <li class="nav-item"><a class="nav-link link-scroll mr-2" href="team.html">Team</a></li>
-                    <li class="nav-item"><a class="nav-link link-scroll mr-2" href="contact.html">Contact</a></li>
+                    <li class="nav-item"><a class="nav-link link-scroll mr-2" href="#vsoc_contact">Contact</a></li>
 
                     <div class="dropdown nav-item">
                         <a class="dropdown-toggle nav-link" href="#" role="button" id="dropdownMenuLink"
