latest updated,plagiarism solved

--- a/index.html
+++ b/index.html
@@ -575,9 +575,7 @@ Coming Soon...</a>
         <div class="row align-items-center">
             <div class="col-lg-6 mb-5 mb-lg-0">
                 <h2>Start your Career with Vidyayan</h2>
-                <p class="text-muted">Vidyayan provides you number of facilities.Join us and boost up your
-                    Coding
-                    knowledge.</p>
+                <p class="text-muted">Vidyayan offers a variety of services . Join us to improve your coding skills.</p>
                 <ul class="list-check">
                     <li class="text-muted mb-2">Live and Recorded Videos</li>
                     <li class="text-muted mb-2">Weekly tests and quizes</li>
@@ -694,8 +692,7 @@ Coming Soon...</a>
               <div class="card shadow rounded-lg px-4 py-5 px-lg-5 with-pattern bg-white border-0">
                 <div class="card-body index-forward pt-5 rounded-lg">
                   <div class="testimonial-img"><img class="rounded-circle" src="img/avatar-2.png" alt="" /></div>
-                  <p class="lead text-muted mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
-                    eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
+                  <p class="lead text-muted mb-5">I can balanced my studies and reports well with Vidyayan</p>
                   <h5 class="font-weight-bold mb-0">Ankit Kumar</h5>
                   <p class="text-primary mb-0 text-small my-2">7th Student</p>
                 </div>
