--- a/index.html
+++ b/index.html
@@ -526,7 +526,7 @@ Coming Soon...</a>
           <!-- Services Item-->
           <div class="card border-0 shadow rounded-lg text-center">
             <div class="card-body p-5">
-              <img src="/img/ad1.png" alt="">
+<!--               <img src="/img/ad1.png" alt=""> -->
               <h3 class="font-weight-normal h4 my-4">Vidyayan Summer of Code 2022</h3>
               <p class="text-small mb-0"></p>
             </div>
@@ -536,7 +536,7 @@ Coming Soon...</a>
           <!-- Services Item-->
           <div class="card border-0 shadow rounded-lg text-center">
             <div class="card-body p-5">
-              <img src="/img/ad2.png" alt="">
+<!--               <img src="/img/ad2.png" alt=""> -->
               <h3 class="font-weight-normal h4 my-4">Vidyayan Internship Programme</h3>
               <p class="text-small mb-0"></p>
             </div>
@@ -546,7 +546,7 @@ Coming Soon...</a>
           <!-- Services Item-->
           <div class="card border-0 shadow rounded-lg text-center">
             <div class="card-body p-5">
-              <img src="/img/ad3.png" alt="">
+<!--               <img src="/img/ad3.png" alt=""> -->
               <h3 class="font-weight-normal h4 my-4">Vidyayan Training Programme</h3>
               <p class="text-small mb-0"></p>
             </div>
