--- a/index.html
+++ b/index.html
@@ -595,7 +595,7 @@ Coming Soon...</a>
                         <!-- Services Item-->
                         <div class="card border-0 shadow rounded-lg text-left px-2">
                             <div class="card-body px">
-                                <img src="/img/guidance-icon.png" alt="">
+<!--                                 <img src="/img/guidance-icon.png" alt=""> -->
                                 <h3 class="h5 font-weight-normal h4 my-3">Learn Live</h3>
                                 <p class="text-small mb-0 text-muted"></p>
                             </div>
@@ -605,7 +605,7 @@ Coming Soon...</a>
                         <!-- Services Item-->
                         <div class="card border-0 shadow rounded-lg text-left px-2">
                             <div class="card-body px">
-                                <img src="/img/weekday-icon.png" alt="">
+<!--                                 <img src="/img/weekday-icon.png" alt=""> -->
                                 <h3 class="h5 font-weight-normal h4 my-3">Quiz and weekly test</h3>
                                 <p class="text-small mb-0 text-muted"></p>
                             </div>
@@ -615,7 +615,7 @@ Coming Soon...</a>
                         <!-- Services Item-->
                         <div class="card border-0 shadow rounded-lg text-left px-2">
                             <div class="card-body px">
-                                <img src="/img/doubts-icon.png" alt="">
+<!--                                 <img src="/img/doubts-icon.png" alt=""> -->
                                 <h3 class="h5 font-weight-normal h4 my-3">Prepare with India’s best tutor</h3>
                                 <p class="text-small mb-0 text-muted"></p>
                             </div>
@@ -625,7 +625,7 @@ Coming Soon...</a>
                         <!-- Services Item-->
                         <div class="card border-0 shadow rounded-lg text-left px-2">
                             <div class="card-body px">
-                                <img src="/img/classes-icon.png" alt="">
+<!--                                 <img src="/img/classes-icon.png" alt=""> -->
                                 <h3 class="h5 font-weight-normal h4 my-3">One-on-one
                                     mentor guidance</h3>
                                 <p class="text-small mb-0 text-muted"></p>
