--- a/faqs.html
+++ b/faqs.html
@@ -485,7 +485,7 @@
               <div class="d-flex">
                 <ul class="list-unstyled d-inline-block mr-4 mb-0">
                   <li class="mb-2"><a class="footer-link" href="#">History </a></li>
-                  <li class="mb-2"><a class="footer-link" href="/about.html">About us</a></li>
+                  <li class="mb-2"><a class="footer-link" href="#">About us</a></li>
                   <li class="mb-2"><a class="footer-link" href="#">Contact us</a></li>
                   <li class="mb-2"><a class="footer-link" href="#">Services</a></li>
                 </ul>
