--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@ Coming Soon...</a>
       <div class="container">
         <h2 class="text-primary"id="#registration" style="align-items: center;">Registration </h2>
         <div class="row align-items-center mb-5">
-          <div class="col-lg-6 mb-5 mb-lg-0"><img class="img-fluid w-100 px-lg-5" src="undraw_pair_programming_njlp.svg"
+          <div class="col-lg-6 mb-5 mb-lg-0"><img class="img-fluid w-100 px-lg-5" src=""
               alt=""></div>
 
           <!--best feature start-->
@@ -649,17 +649,19 @@ Coming Soon...</a>
             <div class="mx-3 mx-lg-5 my-5 pt-3">
               <div class="card shadow rounded-lg px-4 py-5 px-lg-5 with-pattern bg-white border-0">
                 <div class="card-body index-forward pt-5 rounded-lg">
-                  <div class="testimonial-img"><img class="rounded-circle" src="img/avatar-1.jpg" alt="" /></div>
+                  <div class="testimonial-img"><img class="rounded-circle" src="img/avatar-4.jpg" alt="" /></div>
                   <p class="lead text-muted mb-5">Be it 1st or 100th doubt it was answered with patience.</p>
                   <h5 class="font-weight-bold mb-0">Shuhani Sharma</h5>
                   <p class="text-primary mb-0 text-small my-2">10th Student</p>
+                  <!-- Photo by <a href="https://unsplash.com/@buudkaanaa?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Budka Damdinsuren</a> on <a href="https://unsplash.com/s/photos/girls?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a> -->
+  
                 </div>
               </div>
             </div>
             <div class="mx-3 mx-lg-5 my-5 pt-3">
               <div class="card shadow rounded-lg px-4 py-5 px-lg-5 with-pattern bg-white border-0">
                 <div class="card-body index-forward pt-5 rounded-lg">
-                  <div class="testimonial-img"><img class="rounded-circle" src="img/avatar-2.png" alt="" /></div>
+                  <div class="testimonial-img"><img class="rounded-circle" src="img/avatar-5.png" alt="" /></div>
                   <p class="lead text-muted mb-5">Vidyayan's help me understand the concepts through real-life examples.
                   </p>
                   <h5 class="font-weight-bold mb-0">Apurva Saxena</h5>
@@ -681,7 +683,7 @@ Coming Soon...</a>
             <div class="mx-3 mx-lg-5 my-5 pt-3">
               <div class="card shadow rounded-lg px-4 py-5 px-lg-5 with-pattern bg-white border-0">
                 <div class="card-body index-forward pt-5 rounded-lg">
-                  <div class="testimonial-img"><img class="rounded-circle" src="img/avatar-2.png" alt="" /></div>
+                  <div class="testimonial-img"><img class="rounded-circle" src="img/avatar-7.png" alt="" /></div>
                   <p class="lead text-muted mb-5">I can balanced my studies and reports well with Vidyayan</p>
                   <h5 class="font-weight-bold mb-0">Amisha Kumari</h5>
                   <p class="text-primary mb-0 text-small my-2">10th Student</p>
@@ -691,7 +693,7 @@ Coming Soon...</a>
             <div class="mx-3 mx-lg-5 my-5 pt-3">
               <div class="card shadow rounded-lg px-4 py-5 px-lg-5 with-pattern bg-white border-0">
                 <div class="card-body index-forward pt-5 rounded-lg">
-                  <div class="testimonial-img"><img class="rounded-circle" src="img/avatar-2.png" alt="" /></div>
+                  <div class="testimonial-img"><img class="rounded-circle" src="img/avatar-6.png" alt="" /></div>
                   <p class="lead text-muted mb-5">I can balanced my studies and reports well with Vidyayan</p>
                   <h5 class="font-weight-bold mb-0">Ankit Kumar</h5>
                   <p class="text-primary mb-0 text-small my-2">7th Student</p>
@@ -701,10 +703,12 @@ Coming Soon...</a>
             <div class="mx-3 mx-lg-5 my-5 pt-3">
               <div class="card shadow rounded-lg px-4 py-5 px-lg-5 with-pattern bg-white border-0">
                 <div class="card-body index-forward pt-5 rounded-lg">
-                  <div class="testimonial-img"><img class="rounded-circle" src="img/avatar-2.png" alt="" /></div>
+                  <div class="testimonial-img"><img class="rounded-circle" src="img/avatar-3.jpg" alt="" /></div>
                   <p class="lead text-muted mb-5">I was scared by the word JEE, until I Met my Hero Vidyayan</p>
-                  <h5 class="font-weight-bold mb-0">Tanya Jha</h5>
+                  <h5 class="font-weight-bold mb-0">Kartik Jha</h5>
                   <p class="text-primary mb-0 text-small my-2">12th Student</p>
+                  <!-- Photo by <a href="https://unsplash.com/@stephnakagawa?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Stephanie Nakagawa</a> on <a href="https://unsplash.com/s/photos/boys?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a> -->
+  
                 </div>
               </div>
             </div>
