--- a/team.html
+++ b/team.html
@@ -63,7 +63,7 @@
                         </a>
 
                         <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-                            <a class="dropdown-item" href="about.html">About VSoC</a>
+                            <a class="dropdown-item" href="#">About VSoC</a>
                             <a class="dropdown-item" href="ambassdor.html">Campus Ambassdor</a>
                             <a class="dropdown-item" href="#">Careers</a>
                             <a class="dropdown-item" href="#">Our Blog</a>
@@ -195,7 +195,7 @@
                             <div class="mx-3 mx-lg-5 my-5 pt-3">
                                 <div class="card shadow rounded-lg px-4 py-5 px-lg-5 with-pattern bg-white border-0">
                                     <div class="card-body index-forward pt-5 rounded-lg">
-                                        <div class="testimonial-img"><img class="rounded-circle" src="img/avatar-1.jpg"
+                                        <div class="testimonial-img"><img class="rounded-circle" src="img/profile-2.jpg"
                                                 alt="" /></div>
                                         <!-- <p class="lead text-muted mb-5">Lorem ipsum dolor sit amet, consectetur
                                             adipisicing
@@ -203,7 +203,7 @@
                                             eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
                                             minim
                                             veniam.</p> -->
-                                        <h5 class="font-weight-bold mb-0">Sarah Hudson</h5>
+                                        <h5 class="font-weight-bold mb-0">Anshu Priya</h5>
                                         <p class="text-primary mb-0 text-muted text-small">Tech Developer</p>
                                         <ul class="list-inline-item-center mb-lg-0 my-3 scl_link_btn">
                                             <li class="list-inline-item"><a class="social-link"
