--- a/ambassdor.html
+++ b/ambassdor.html
@@ -63,7 +63,7 @@
                         </a>
 
                         <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-                            <a class="dropdown-item" href="about.html">About VSoC</a>
+                            <a class="dropdown-item" href="#">About VSoC</a>
                             <a class="dropdown-item" href="ambassdor.html">Campus Ambassdor</a>
                             <a class="dropdown-item" href="#">Careers</a>
                             <a class="dropdown-item" href="#">Our Blog</a>
@@ -203,8 +203,8 @@
                                             eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
                                             minim
                                             veniam.</p> -->
-                                        <h5 class="font-weight-bold mb-0">Sarah Hudson</h5>
-                                        <p class="text-primary mb-0 text-muted text-small">Tech Developer</p>
+                                        <h5 class="font-weight-bold mb-0">Anshu Priya</h5>
+                                        <p class="text-primary mb-0 text-muted text-small">Co-Founder & COO</p>
                                         <ul class="list-inline-item-center mb-lg-0 my-3 scl_link_btn">
                                             <li class="list-inline-item"><a class="social-link"
                                                     href="https://www.facebook.com/vidyayan.edu"><i
