--- a/training.html
+++ b/training.html
@@ -64,7 +64,7 @@
                         </a>
 
                         <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-                            <a class="dropdown-item" href="/about.html">About VSoC</a>
+                            <a class="dropdown-item" href="#">About VSoC</a>
                             <a class="dropdown-item" href="/about.html">Campus Ambessdor</a>
                             <a class="dropdown-item" href="#">Careers</a>
                             <a class="dropdown-item" href="#">Our Blog</a>
