--- a/index.html
+++ b/index.html
@@ -100,11 +100,11 @@
            </h1>
           <p class="my-4 text-muted">Vidyayan Summer Of Code <b>(VSoC)</b> is a Vidyayan open source initiative that runs for three months. All enrolled participants in this Summer Of Code will have the unique chance to connect with Mentors and the Organizing Team.</p>
 
-          <div class="row"><br><br>
+          <div class="row" id=""><br><br>
             <button type="button"
   class="btn btn-primary btn-lg btn-block btn-outline-warning btn-rounded"
   data-mdb-ripple-color="dark"
-><a href="https://www.linkedin.com/showcase/vsoc-community" target="_blank" style="color: #f17c1d; ">
+><a href="https://www.linkedin.com/company/vsoccommunity" target="_blank" id="linkbtn" style="color: #f17c1d; ">
 Coming Soon...</a>
 </button>
           <!--  <img src="./icons/g-play1.jpeg" style="width:50%; height: 100%" alt="">
