buttons css changes

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
             <button type="button"
   class="btn btn-primary btn-lg btn-block btn-outline-warning btn-rounded"
   data-mdb-ripple-color="dark"
-><a href="https://www.linkedin.com/company/vsoccommunity" target="_blank" id="linkbtn" style="color: #f17c1d; ">
+><a href="https://www.linkedin.com/company/vsoccommunity" id="anchor" target="_blank" style="text-decoration: none;">
 Coming Soon...</a>
 </button>
           <!--  <img src="./icons/g-play1.jpeg" style="width:50%; height: 100%" alt="">
