--- a/projects.html
+++ b/projects.html
@@ -102,7 +102,7 @@
                                     class="btn   btn-outline-warning btn-rounded"
                                     data-mdb-ripple-color="dark"
                                   >
-                                  View Project	&nbsp;	&nbsp;<i class="fa fa-arrow-right" aria-hidden="true"></i>
+                                  <a href="" id='anchor' style="text-decoration: none;">View Project</a> 	&nbsp;	&nbsp;<i class="fa fa-arrow-right" aria-hidden="true"></i>
                                   </button>
                             </div>
                         </div>
